--- a/manifest.json
+++ b/manifest.json
@@ -13,9 +13,9 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "./",
-  "background_color": "#2a3f82",
+  "start_url": "index.html",
+  "background_color": "#006699",
   "display": "standalone",
-  "scope": "",
-  "theme_color": "#334170"
+  "scope": "/",
+  "theme_color": "#006699"
 }
