--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/jujoco/jujoco.github.io#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "contentful": "^7.10.0",
     "express": "^4.16.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
