--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "jujoco.github.io",
   "version": "1.0.0",
   "description": "Personal site",
-  "main": "index.js",
+  "private": true,
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "scripts": {
-    "react-dev": "webpack -d -w"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -35,7 +38,10 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0"
+    "css-loader": "^4.1.1",
+    "file-loader": "^6.0.0",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12"
   }
 }
