--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "build-dev": "webpack -w"
   },
   "repository": {
     "type": "git",
@@ -41,7 +42,7 @@
     "css-loader": "^4.1.1",
     "file-loader": "^6.0.0",
     "style-loader": "^1.2.1",
-    "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4"
   }
 }
